--- a/index.html
+++ b/index.html
@@ -3,28 +3,91 @@
   <head>
     <meta charset="utf-8">
     <title>Student Ambassador Homepage</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/css/mdb.min.css" media="screen" title="no title">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen" title="no title">
-    <link rel="stylesheet" href="styles.css" media="screen" title="no title">
+    <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title">
   </head>
   <body>
     <nav>
       <!-- <img src="logo_color.png" alt="" /> -->
-      <span>STU</span>
-      <img src="shield_color.png" alt="" />
-      <span>ENT AMBASSADORS</span>
+      <a href="index.html">
+        <div class="logo">
+          <span>STU</span>
+          <img src="images/shield_color.png" alt=""/>
+          <span>ENT AMBASSADORS</span>
+        </div>
+      </a>
+
+      <div class="pages">
+        <a href="index.html"><li>Home</li></a>
+        <a href="#"><li>Extensions</li></a>
+        <a href="#"><li>Counselor Map</li></a>
+        <a href="#"><li>Important Credentials</li></a>
+      </div>
     </nav>
     <div class="links">
-      <button type="button" class="btn" onclick="window.open('https://mail.google.com/mail/u/0/#inbox', '_blank')"><i class="fa fa-envelope" aria-hidden="true"></i> Gmail</button>
+      <!-- <button type="button" class="btn" onclick="window.open('https://mail.google.com/mail/u/0/#inbox', '_blank')"><i class="fa fa-envelope" aria-hidden="true"></i> Gmail</button>
+      <button type="button" class="btn" onclick="window.open('https://www.facebook.com/groups/1722629241344546/', '_blank')"><i class="fa fa-facebook-official" aria-hidden="true"></i> Facebook Page</button>
       <button type="button" class="btn" onclick="window.open('https://drive.google.com/drive/#my-drive', '_blank')"><i class="fa fa-hdd-o" aria-hidden="true"></i> Google Drive</button>
       <button type="button" class="btn" onclick="window.open('https://www.google.com/calendar/render?pli=1#h', '_blank')"><i class="fa fa-calendar" aria-hidden="true"></i> Calendar</button>
       <button type="button" class="btn" onclick="window.open('https://bit.ly/admprojects', '_blank')"><i class="fa fa-tasks" aria-hidden="true"></i> Project Tracker</button>
-      <button type="button" class="btn" onclick="window.open('https://docs.google.com/spreadsheets/d/1vGaOQqrJM0HVm87gGOAf7mBu6XWUnv9GiMFkY_qQ33A/edit#gid=777844220', '_blank')"><i class="fa fa-th-list" aria-hidden="true"></i> SA Schedule</button>
-      <button type="button" class="btn" onclick="window.open('https://www.pandora.com', '_blank')"><i class="fa fa-music" aria-hidden="true"></i> Pandora</button>
+      <button type="button" class="btn" onclick="window.open('https://docs.google.com/spreadsheets/d/1vGaOQqrJM0HVm87gGOAf7mBu6XWUnv9GiMFkY_qQ33A/edit#gid=777844220', '_blank')"><i class="fa fa-th-list" aria-hidden="true"></i> Schedule</button> -->
+      <!-- <div class="icon" id="facebook" onclick="facebook();">
+        <i class="fa fa-facebook-official fa-4x" aria-hidden="true"></i>
+        <span>Facebook</span>
+      </div> -->
+
+      <div class="icon" id="tracker" onclick="location.href = 'https://bit.ly/admprojects'">
+        <i class="fa fa-tasks fa-4x" aria-hidden="true"></i>
+        <span>Project Tracker</span>
+      </div>
+      <div class="icon" id="schedule" onclick="location.href = 'https://docs.google.com/spreadsheets/d/1vGaOQqrJM0HVm87gGOAf7mBu6XWUnv9GiMFkY_qQ33A/edit#gid=777844220'">
+        <i class="fa fa-th-list fa-4x" aria-hidden="true"></i>
+        <span>Schedule</span>
+      </div>
+      <div class="icon" id="calendar" onclick="location.href = 'https://www.google.com/calendar/render?pli=1#h'">
+        <i class="fa fa-calendar fa-4x" aria-hidden="true"></i>
+        <span>Calendar</span>
+      </div>
+      <div class="icon" id="gmail" onclick="location.href = 'https://mail.google.com/mail/u/0/#inbox'">
+        <i class="fa fa-envelope fa-4x" aria-hidden="true"></i>
+        <span>Gmail</span>
+      </div>
+      <div class="icon" id="drive" onclick="location.href = 'https://drive.google.com/drive/#my-drive'">
+        <i class="fa fa-hdd-o fa-4x" aria-hidden="true"></i>
+        <span>Google Drive</span>
+      </div>
+      <div class="icon" id="coverage" onclick="location.href = 'http://bit.ly/F16SACoverage'">
+        <i class="fa fa-clock-o fa-4x" aria-hidden="true"></i>
+        <span>Shift Coverage</span>
+      </div>
+      <div class="icon" id="wings" onclick="location.href = 'http://bit.ly/satrainingprogress'">
+        <img src="images/wings.png" alt="" style="height: 75px; width: 75px; padding-left: 44px; filter: brightness(0) invert(1); transform: scale(1.3) translateY(-3px);">
+        <span>Wings Progress</span>
+      </div>
+      <a href="pages/saotm.html">
+        <div class="icon" id="saotm">
+          <i class="fa fa-user fa-4x" aria-hidden="true"></i>
+          <span>SAOTM</span>
+        </div>
+      </a>
     </div>
-    <div class="content">
-    </div>
+    <footer>
+      <div id="champlain">
+        <img src="images/shield_color.png" alt=""/>
+        <span>LET US DARE</span>
+      </div>
+      <span id = "footer-background"></span>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/js/mdb.min.js" charset="utf-8"></script>
+    <script>
+      var facebook = function() {
+        chrome.windows.create({
+          url: "http://www.google.com",
+          incognito: true
+        });
+      }
+    </script>
   </body>
 </html>
