--- a/index.html
+++ b/index.html
@@ -27,58 +27,64 @@
         <a href="index.html"><li>Home</li></a>
         <a href="#"><li>Extensions</li></a>
         <a href="#"><li>Counselor Map</li></a>
-        <a href="#"><li>Important Credentials</li></a>
       </div>
     </nav>
-    <div class="links">
-      <a href="https://bit.ly/admprojects">
-        <div class="icon" id="tracker">
-          <i class="fa fa-tasks fa-4x" aria-hidden="true"></i>
-          <span>Project Tracker</span>
-        </div>
-      </a>
-      <a href="https://docs.google.com/spreadsheets/d/1vGaOQqrJM0HVm87gGOAf7mBu6XWUnv9GiMFkY_qQ33A/edit#gid=777844220">
-        <div class="icon" id="schedule">
-          <i class="fa fa-th-list fa-4x" aria-hidden="true"></i>
-          <span>Schedule</span>
-        </div>
-      </a>
-      <a href="https://www.google.com/calendar/render?pli=1#h">
-        <div class="icon" id="calendar">
-          <i class="fa fa-calendar fa-4x" aria-hidden="true"></i>
-          <span>Calendar</span>
-        </div>
-      </a>
-      <a href="https://mail.google.com/mail/u/0/#inbox">
-        <div class="icon" id="gmail">
-          <i class="fa fa-envelope fa-4x" aria-hidden="true"></i>
-          <span>Gmail</span>
-        </div>
-      </a>
-      <a href="https://drive.google.com/drive/#my-drive">
-        <div class="icon" id="drive">
-          <i class="fa fa-hdd-o fa-4x" aria-hidden="true"></i>
-          <span>Google Drive</span>
-        </div>
-      </a>
-      <a href="http://bit.ly/F16SACoverage">
-        <div class="icon" id="coverage">
-          <i class="fa fa-clock-o fa-4x" aria-hidden="true"></i>
-          <span>Shift Coverage</span>
-        </div>
-      </a>
-      <a href="http://bit.ly/satrainingprogress">
-        <div class="icon" id="wings">
-          <img src="images/wings.png" alt="" style="height: 75px; width: 75px; padding-left: 44px; filter: brightness(0) invert(1); transform: scale(1.3) translateY(-3px);">
-          <span>Wings Progress</span>
-        </div>
-      </a>
-      <a href="pages/saotm.html">
-        <div class="icon" id="saotm">
-          <i class="fa fa-user fa-4x" aria-hidden="true"></i>
-          <span>SAOTM</span>
-        </div>
-      </a>
+
+    <div class="wrapper">
+      <div class="links">
+        <a href="https://bit.ly/admprojects">
+          <div class="icon" id="tracker">
+            <i class="fa fa-tasks fa-4x" aria-hidden="true"></i>
+            <span>Project Tracker</span>
+          </div>
+        </a>
+        <a href="https://docs.google.com/spreadsheets/d/1vGaOQqrJM0HVm87gGOAf7mBu6XWUnv9GiMFkY_qQ33A/edit#gid=777844220">
+          <div class="icon" id="schedule">
+            <i class="fa fa-th-list fa-4x" aria-hidden="true"></i>
+            <span>Schedule</span>
+          </div>
+        </a>
+        <a href="https://www.google.com/calendar/render?pli=1#h">
+          <div class="icon" id="calendar">
+            <i class="fa fa-calendar fa-4x" aria-hidden="true"></i>
+            <span>Calendar</span>
+          </div>
+        </a>
+        <a href="https://mail.google.com/mail/u/0/#inbox">
+          <div class="icon" id="gmail">
+            <i class="fa fa-envelope fa-4x" aria-hidden="true"></i>
+            <span>Gmail</span>
+          </div>
+        </a>
+        <a href="https://drive.google.com/drive/#my-drive">
+          <div class="icon" id="drive">
+            <img src="images/googledrive.ico" alt="" style="height: 75px; width: 75px; padding-left: 44px; filter: brightness(0) invert(1); transform: scale(1.3) translateY(-3px);">
+            <span>Google Drive</span>
+          </div>
+        </a>
+        <a href="http://bit.ly/F16SACoverage">
+          <div class="icon" id="coverage">
+            <i class="fa fa-clock-o fa-4x" aria-hidden="true"></i>
+            <span>Shift Coverage</span>
+          </div>
+        </a>
+        <a href="http://bit.ly/satrainingprogress">
+          <div class="icon" id="wings">
+            <img src="images/wings.png" alt="" style="height: 75px; width: 75px; padding-left: 44px; filter: brightness(0) invert(1); transform: scale(1.3) translateY(-3px);">
+            <span>Wings Progress</span>
+          </div>
+        </a>
+        <a href="pages/saotm.html">
+          <div class="icon" id="saotm">
+            <i class="fa fa-user fa-4x" aria-hidden="true"></i>
+            <span>SAOTM</span>
+          </div>
+        </a>
+      </div>
+      <div class="news">
+        <h1>Office Updates &amp; News</h1>
+        <div class="items"></div>
+      </div>
     </div>
     <footer>
       <div id="champlain">
@@ -87,8 +93,10 @@
       </div>
       <span id = "footer-background"></span>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/js/mdb.min.js" charset="utf-8"></script>
+
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/js/mdb.min.js" charset="utf-8"></script>
+    <script src="./assets/tabletop.js" charset="utf-8"></script>
     <script type="text/javascript">
       $("#coverage").click(function(event) {
         event.preventDefault();
@@ -105,6 +113,34 @@
           $("#coverage span").text("Shift Coverage");
         }, 5000);
       });
+      window.onload = function() { init() };
+
+      var public_spreadsheet_url = 'https://docs.google.com/spreadsheets/d/1WcXn7_LocnbqskQxmBs0G7XzayQTgtnaWjOVrW1BSwk/pubhtml';
+
+      function init() {
+        Tabletop.init( { key: public_spreadsheet_url,
+                         callback: showInfo,
+                         simpleSheet: true } )
+      }
+
+      function showInfo(data, tabletop) {
+        $(".news .items").empty();
+        if (data.length == 0){
+          $(".news .items").append("<h3> No updates at this time </h3>").css("overflow-y", "hidden");
+        } else {
+          $(".news .items").css("overflow-y", "scroll");
+          var i;
+          for(i = data.length - 1; i >= 0; i--){
+            console.log(data[i].Date);
+            $(".news .items").append(
+              '<tr class="item"> <td class="date">' + data[i].Date + '</td> <td class="message">' + data[i].Message + '</td> </tr>'
+            );
+          }
+        }
+        setTimeout(function(){
+          init();
+        }, 10000);
+      }
     </script>
   </body>
 </html>
