--- a/pages/saotm.html
+++ b/pages/saotm.html
@@ -22,11 +22,10 @@
         <a href="../index.html"><li>Home</li></a>
         <a href="#"><li>Extensions</li></a>
         <a href="#"><li>Counselor Map</li></a>
-        <a href="#"><li>Important Credentials</li></a>
       </div>
     </nav>
     <div class="content">
-      <embed src="../saotm/Winter.pdf" width="100%" height="100%">
+      <embed src="../saotm/saotm_december_2016.pdf" width="100%" height="100%">
     </div>
     <footer>
       <div id="champlain">
