Mobile friendly version, mostly styling update

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </a>
         <a href="https://drive.google.com/drive/#my-drive">
           <div class="icon" id="drive">
-            <img src="images/googledrive.ico" alt="" style="height: 75px; width: 75px; padding-left: 44px; filter: brightness(0) invert(1); transform: scale(1.3) translateY(-3px);">
+            <img src="images/googledrive.ico" alt="">
             <span>Google Drive</span>
           </div>
         </a>
@@ -70,7 +70,7 @@
         </a>
         <a href="http://bit.ly/satrainingprogress">
           <div class="icon" id="wings">
-            <img src="images/wings.png" alt="" style="height: 75px; width: 75px; padding-left: 44px; filter: brightness(0) invert(1); transform: scale(1.3) translateY(-3px);">
+            <img src="images/wings.png" alt="">
             <span>Wings Progress</span>
           </div>
         </a>
@@ -91,7 +91,7 @@
         <img src="images/shield_color.png" alt=""/>
         <span>LET US DARE</span>
       </div>
-      <span id = "footer-background"></span>
+      <span id="footer-background"></span>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
