Changed span styling

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
       $("#coverage").click(function(event) {
         event.preventDefault();
         $("#coverage").css("background-color", "#EE3124");
+        $("#coverage span").css("font-size", "20px");
         $("#coverage").addClass("animated shake");
         $("#coverage i").hide();
         $("#coverage").prepend('<i class="fa fa-user-secret fa-4x" aria-hidden="true"></i>');
