--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <nav>
       <!-- <img src="logo_color.png" alt="" /> -->
-      <a id="logo-wrapper" href="index.html">
+      <a href="index.html" style="display: flex; flex-flow: row wrap;">
         <div class="logo">
           <span>STU</span>
           <img src="images/shield_color.png" alt=""/>
@@ -25,7 +25,7 @@
 
       <div class="pages">
         <a href="index.html"><li>Home</li></a>
-        <a href="#"><li>Extensions</li></a>
+        <a href="./pages/extensions.html"><li>Extensions</li></a>
         <a href="#"><li>Counselor Map</li></a>
       </div>
     </nav>
@@ -58,7 +58,7 @@
         </a>
         <a href="https://drive.google.com/drive/#my-drive">
           <div class="icon" id="drive">
-            <img src="images/googledrive.ico" alt="">
+            <img src="images/googledrive.ico" alt="" style="height: 75px; width: 75px; padding-left: 44px; filter: brightness(0) invert(1); transform: scale(1.3) translateY(-3px);">
             <span>Google Drive</span>
           </div>
         </a>
@@ -70,7 +70,7 @@
         </a>
         <a href="http://bit.ly/satrainingprogress">
           <div class="icon" id="wings">
-            <img src="images/wings.png" alt="">
+            <img src="images/wings.png" alt="" style="height: 75px; width: 75px; padding-left: 44px; filter: brightness(0) invert(1); transform: scale(1.3) translateY(-3px);">
             <span>Wings Progress</span>
           </div>
         </a>
@@ -91,7 +91,7 @@
         <img src="images/shield_color.png" alt=""/>
         <span>LET US DARE</span>
       </div>
-      <span id="footer-background"></span>
+      <span id = "footer-background"></span>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
@@ -101,7 +101,6 @@
       $("#coverage").click(function(event) {
         event.preventDefault();
         $("#coverage").css("background-color", "#EE3124");
-        $("#coverage span").css("font-size", "20px");
         $("#coverage").addClass("animated shake");
         $("#coverage i").hide();
         $("#coverage").prepend('<i class="fa fa-user-secret fa-4x" aria-hidden="true"></i>');
@@ -129,7 +128,7 @@
         if (data.length == 0){
           $(".news .items").append("<h3> No updates at this time </h3>").css("overflow-y", "hidden");
         } else {
-          $(".news .items").css("overflow-y", "auto");
+          $(".news .items").css("overflow-y", "scroll");
           var i;
           for(i = data.length - 1; i >= 0; i--){
             console.log(data[i].Date);
