--- a/pages/extensions.html
+++ b/pages/extensions.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="../styles/saotm.css" media="screen" title="no title">
   </head>
   <body>
+
+    <!--Navigation bar!-->
     <nav>
-      <!-- <img src="logo_color.png" alt="" /> -->
       <a href="../index.html">
         <div class="logo">
           <span>STU</span>
@@ -24,9 +25,13 @@
         <a href="#"><li>Counselor Map</li></a>
       </div>
     </nav>
+
+
     <div class="content">
-      <embed src="../saotm/saotm_december_2016.pdf" width="100%" height="100%">
+      
     </div>
+
+    <!-- Footer bar !-->
     <footer>
       <div id="champlain">
         <img src="../images/shield_color.png" alt=""/>
@@ -34,6 +39,7 @@
       </div>
       <span id = "footer-background"></span>
     </footer>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/js/mdb.min.js" charset="utf-8"></script>
     <script>
       var facebook = function() {
