Fixed some styling mishaps

--- a/pages/extensions.html
+++ b/pages/extensions.html
@@ -6,19 +6,23 @@
     <link rel="icon" type="../image/png" sizes="16x16" href="../images/favicon-16x16.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/css/mdb.min.css" media="screen" title="no title">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen" title="no title">
-    <link rel="stylesheet" href="../styles/saotm.css" media="screen" title="no title">
+    <link rel="stylesheet" href="../styles/styles.css" media="screen" title="no title">
   </head>
   <body>
 
     <!--Navigation bar!-->
     <nav>
-      <a href="../index.html">
+      <a href="index.html" style="display: flex; flex-flow: row wrap;">
         <div class="logo">
           <span>STU</span>
           <img src="../images/shield_color.png" alt=""/>
-          <span>ENT AMBASSADORS</span>
+          <span>ENT &nbsp;</span>
+        </div>
+        <div class="logo">
+          <span>AMBASSADORS</span>
         </div>
       </a>
+
       <div class="pages">
         <a href="../index.html"><li>Home</li></a>
         <a href="./extensions.html"><li>Extensions</li></a>
@@ -27,8 +31,11 @@
     </nav>
 
 
-    <div class="content">
-      
+    <div class="wrapper">
+      <div class="news">
+        <h1>Office Updates &amp; News</h1>
+        <div class="items"></div>
+      </div>
     </div>
 
     <!-- Footer bar !-->
