Do work on the extensions styling

--- a/pages/extensions.html
+++ b/pages/extensions.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/css/mdb.min.css" media="screen" title="no title">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen" title="no title">
     <link rel="stylesheet" href="../styles/styles.css" media="screen" title="no title">
+    <link rel="stylesheet" href="../styles/extensions.css" media="screen" title="no title">
   </head>
   <body>
 
     <!--Navigation bar!-->
     <nav>
-      <a href="index.html" style="display: flex; flex-flow: row wrap;">
+      <!-- <img src="logo_color.png" alt="" /> -->
+      <a id="logo-wrapper" href="../index.html">
         <div class="logo">
           <span>STU</span>
           <img src="../images/shield_color.png" alt=""/>
@@ -30,13 +32,6 @@
       </div>
     </nav>
 
-
-    <div class="wrapper">
-      <div class="news">
-        <h1>Office Updates &amp; News</h1>
-        <div class="items"></div>
-      </div>
-    </div>
 
     <!-- Footer bar !-->
     <footer>
