Update SAOTM page to use the new nav bar style.

--- a/pages/saotm.html
+++ b/pages/saotm.html
@@ -9,21 +9,29 @@
     <link rel="stylesheet" href="../styles/saotm.css" media="screen" title="no title">
   </head>
   <body>
+
+    <!--Navigation bar!-->
     <nav>
       <!-- <img src="logo_color.png" alt="" /> -->
-      <a href="../index.html">
+      <a id="logo-wrapper" href="../index.html">
         <div class="logo">
           <span>STU</span>
           <img src="../images/shield_color.png" alt=""/>
-          <span>ENT AMBASSADORS</span>
+          <span>ENT &nbsp;</span>
+        </div>
+        <div class="logo">
+          <span>AMBASSADORS</span>
         </div>
       </a>
+
       <div class="pages">
         <a href="../index.html"><li>Home</li></a>
         <a href="./extensions.html"><li>Extensions</li></a>
         <a href="#"><li>Counselor Map</li></a>
       </div>
     </nav>
+
+
     <div class="content">
       <embed src="../saotm/saotm_december_2016.pdf" width="100%" height="100%">
     </div>
