Add the first iteration of the extensions map.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <div class="pages">
         <a href="index.html"><li>Home</li></a>
-        <a href="#"><li>Extensions</li></a>
+        <a href="./pages/extensions.html"><li>Extensions</li></a>
         <a href="#"><li>Counselor Map</li></a>
       </div>
     </nav>
