--- a/pages/extensions.html
+++ b/pages/extensions.html
@@ -32,6 +32,88 @@
       </div>
     </nav>
 
+    <div class="extensionswrapper">
+      <div class="extensionsbox">
+        <h1>ADMISSIONS OPS TEAM</h1>
+        <table>
+          <tr class="importantcontact"><td>Sue Chamberlain</td><td>5812</td></tr>
+          <tr class="importantcontact"><td>Almir Salkic</td><td>6640</td></tr>
+          <tr class="importantcontact"><td>Irene Webster (Front Desk)</td><td>5990</td></tr>
+          <tr><td>Direct Line</td><td>2727</td></tr>
+          <tr><td>Mike Crowley</td><td>6636</td></tr>
+          <tr><td>Grace Curley</td><td>6429</td></tr>
+          <tr><td>Karen Heil</td><td>5902</td></tr>
+          <tr><td>Diana Matot</td><td>5975</td></tr>
+          <tr><td>Ginger Pressey</td><td>6288</td></tr>
+        </table>
+      </div>
+      <div class="extensionsbox">
+        <h1>ADMISSIONS COUNSELORS</h1>
+        <table>
+          <tr class="importantcontact"><td>Jovan Ellis</td><td>5805</td></tr>
+          <tr class="importantcontact"><td>Veronica Lewis</td><td>6635</td></tr>
+          <tr><td>Julia Caminiti</td><td>5994</td></tr>
+          <tr><td>Howie LeBlanco</td><td>6639</td></tr>
+          <tr><td>Nicole Lentine</td><td>6642</td></tr>
+          <tr><td>Nadia Mitchell</td><td>6644</td></tr>
+          <tr><td>Chris Perlongo</td><td>5740</td></tr>
+          <tr><td>Alana Perry</td><td>6646</td></tr>
+        </table>
+      </div>
+      <div class="extensionsbox">
+        <h1>STUDENT ACCOUNTS</h1>
+        <table>
+          <tr class="importantcontact"><td>Direct Line</td><td>2330</td></tr>
+          <tr><td>Shelley Bernier</td><td>6482</td></tr>
+          <tr><td>Mikael Blanco</td><td>5718</td></tr>
+          <tr><td>Diane Byrnes</td><td>6419</td></tr>
+          <tr><td>Teresa Crowley</td><td>6473</td></tr>
+          <tr><td>Sue Garrow</td><td>6483</td></tr>
+          <tr><td>Pat Kennedy</td><td>6484</td></tr>
+          <tr><td>Tami Patnode</td><td>6664</td></tr>
+          <tr><td>Maureen Whitney</td><td>5718</td></tr>
+        </table>
+      </div>
+      <div class="extensionsbox">
+        <h1>ESC</h1>
+        <table>
+          <tr class="importantcontact"><td>Direct Line</td><td>2777</td></tr>
+          <tr><td>Sara Commins</td><td>5970</td></tr>
+          <tr><td>Kristen Dolan</td><td>5848</td></tr>
+        </table>
+      </div>
+      <div class="extensionsbox">
+        <h1>INTERNATIONAL EDUCATION</h1>
+        <table>
+          <tr><td>James Cross</td><td>6633</td></tr>
+          <tr><td>Sarah DeShaw</td><td>2742</td></tr>
+          <tr><td>Noah Goldblatt</td><td>6464</td></tr>
+          <tr><td>Jessa Karki</td><td>6485</td></tr>
+          <tr><td>Elin Melchior</td><td>5842</td></tr>
+        </table>
+      </div>
+      <div class="extensionsbox">
+        <h1>GRAD ADMISSIONS</h1>
+        <table>
+          <tr><td>Duncan Adamson</td><td>6645</td></tr>
+          <tr><td>Marissa George</td><td>6601</td></tr>
+          <tr><td>Carin McCarthy</td><td>6603</td></tr>
+        </table>
+      </div>
+      <div class="extensionsbox">
+        <h1>FINANCIAL AID</h1>
+        <table>
+          <tr class="importantcontact"><td>Direct Line</td><td>2906</td></tr>
+        </table>
+      </div>
+      <div class="extensionsbox">
+        <h1>OTHER/GENERAL</h1>
+        <table>
+          <tr class="importantcontact"><td>Student Ambassador Office</td><td>2305</td></tr>
+          <tr><td>Top Desk</td><td>2313</td></tr>
+        </table>
+      </div>
+    </div>
 
     <!-- Footer bar !-->
     <footer>
@@ -43,13 +125,5 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/js/mdb.min.js" charset="utf-8"></script>
-    <script>
-      var facebook = function() {
-        chrome.windows.create({
-          url: "http://www.google.com",
-          incognito: true
-        });
-      }
-    </script>
   </body>
 </html>
