Cleanup SAOTM styles page and fix footer

--- a/pages/saotm.html
+++ b/pages/saotm.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="../image/png" sizes="16x16" href="../images/favicon-16x16.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/css/mdb.min.css" media="screen" title="no title">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen" title="no title">
+    <link rel="stylesheet" href="../styles/styles.css" media="screen" title="no title">
     <link rel="stylesheet" href="../styles/saotm.css" media="screen" title="no title">
   </head>
   <body>
@@ -32,9 +33,10 @@
     </nav>
 
 
-    <div class="content">
+    <div class="saotmbox">
       <embed src="../saotm/saotm_december_2016.pdf" width="100%" height="100%">
     </div>
+
     <footer>
       <div id="champlain">
         <img src="../images/shield_color.png" alt=""/>
@@ -42,14 +44,7 @@
       </div>
       <span id = "footer-background"></span>
     </footer>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/js/mdb.min.js" charset="utf-8"></script>
-    <script>
-      var facebook = function() {
-        chrome.windows.create({
-          url: "http://www.google.com",
-          incognito: true
-        });
-      }
-    </script>
   </body>
 </html>
