--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="pages">
         <a href="index.html"><li>Home</li></a>
         <a href="./pages/extensions.html"><li>Extensions</li></a>
-        <a href="#"><li>Counselor Map</li></a>
+        <a href="./pages/counselormap.html"><li>Counselor Map</li></a>
       </div>
     </nav>
 
