--- a/pages/counselormap.html
+++ b/pages/counselormap.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/css/mdb.min.css" media="screen" title="no title">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen" title="no title">
     <link rel="stylesheet" href="../styles/styles.css" media="screen" title="no title">
-    <link rel="stylesheet" href="../styles/saotm.css" media="screen" title="no title">
+    <link rel="stylesheet" href="../styles/counselormap.css" media="screen" title="no title">
   </head>
   <body>
 
@@ -32,11 +32,13 @@
       </div>
     </nav>
 
-
-    <div class="saotmbox">
-      <embed src="../saotm/saotm_december_2016.pdf" width="100%" height="100%">
+    <div class="extensionswrapperwrapper">
+      <div class="extensionswrapper">
+        <center><img src="../images/counselor_territory_201617.png", height="700vh"/> </center>
+      </div>
     </div>
 
+    <!-- Footer bar !-->
     <footer>
       <div id="champlain">
         <img src="../images/shield_color.png" alt=""/>
